created main and footer

--- a/exercises/htmlandcss/spiced web site/index.html
+++ b/exercises/htmlandcss/spiced web site/index.html
@@ -10,9 +10,9 @@
     <body>
         <div><h1>Let's make a webpage!</h1></div>
         <header class="container">
-            <div id="logo">
+            <nav id="logo">
                 <img id="spiced" src="./assets/spiced.png" alt="" />
-            </div>
+            </nav>
 
             <div id="menu-button">
                 <img
@@ -23,8 +23,61 @@
             </div>
         </header>
         <!-- div.container>h3*4 shortcut-->
-        <div class="container">
+        <section class="container">
             <img id="spices" src="./assets/spices.jpg" alt="" srcset="" />
-        </div>
+            <h2>Welcome to SPICED and the Future</h2>
+            <button class="get-start-button">Get Started</button>
+        </section>
+        <section class="about">
+            <aside>
+                <div>
+                    <img src="./assets/cat.svg" alt="icon" />
+                </div>
+                <div>
+                    <p><strong> Best-in-class Features</strong></p>
+                    <p>
+                        Nobody does this stuff better than us. You can bet your
+                        live on that.
+                    </p>
+                </div>
+            </aside>
+            <aside>
+                <div>
+                    <img src="./assets/world.svg" alt="icon" />
+                </div>
+                <div>
+                    <p><strong> Reliable Service</strong></p>
+                    <p>
+                        You can count on us to help you whenever you need it.
+                        We're talking round the clock service.
+                    </p>
+                </div>
+            </aside>
+            <aside>
+                <div>
+                    <img src="./assets/swim.svg" alt="icon" />
+                </div>
+                <div>
+                    <p><strong> An Acquired Taste</strong></p>
+                    <p>
+                        It may take a litlle while for you to warm up to us once
+                        you do you will never want to switch.
+                    </p>
+                </div>
+            </aside>
+            <aside>
+                <div>
+                    <img src="./assets/columns.svg" alt="icon" />
+                </div>
+                <div>
+                    <p><strong>No Limits</strong></p>
+                    <p>
+                        There are absolutely no limits. We do not yhrottle. We
+                        do not cap.
+                    </p>
+                </div>
+            </aside>
+        </section>
+        <footer>© 2016 Some Organization</footer>
     </body>
 </html>
