--- a/exercises/htmlandcss/spiced web site/index.html
+++ b/exercises/htmlandcss/spiced web site/index.html
@@ -8,17 +8,17 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div><h1>Let's make a webpage!</h1></div>
+        <!-- <div><h1>Let's make a webpage!</h1></div> -->
         <header class="container">
             <nav id="logo">
-                <img id="spiced" src="./assets/spiced.png" alt="" />
+                <img id="spiced" src="./assets/spiced.png" alt="spiced-icon" />
             </nav>
 
             <div id="menu-button">
                 <img
                     id="hamburguer-menu"
                     src="./assets/hamburgermenu.svg"
-                    alt=""
+                    alt="menu-button"
                 />
             </div>
         </header>
@@ -29,7 +29,7 @@
             <button class="get-start-button">Get Started</button>
         </section>
         <section class="about">
-            <aside>
+            <aside class="pseudo-cell" class="pseudo-cell">
                 <div>
                     <img src="./assets/cat.svg" alt="icon" />
                 </div>
@@ -41,7 +41,7 @@
                     </p>
                 </div>
             </aside>
-            <aside>
+            <aside class="pseudo-cell second">
                 <div>
                     <img src="./assets/world.svg" alt="icon" />
                 </div>
@@ -53,7 +53,8 @@
                     </p>
                 </div>
             </aside>
-            <aside>
+            <!-- </section>
+            <aside class="pseudo-cell">
                 <div>
                     <img src="./assets/swim.svg" alt="icon" />
                 </div>
@@ -65,7 +66,7 @@
                     </p>
                 </div>
             </aside>
-            <aside>
+            <aside class="pseudo-cell second">
                 <div>
                     <img src="./assets/columns.svg" alt="icon" />
                 </div>
@@ -77,6 +78,59 @@
                     </p>
                 </div>
             </aside>
+        </section> -->
+        </section>
+        <section class="about">
+            <aside class="pseudo-cell">
+                <div>
+                    <img src="./assets/swim.svg" alt="icon" />
+                </div>
+                <div>
+                    <p><strong> An Acquired Taste</strong></p>
+                    <p>
+                        It may take a litlle while for you to warm up to us once
+                        you do you will never want to switch.
+                    </p>
+                </div>
+            </aside>
+            <aside class="pseudo-cell second">
+                <div>
+                    <img src="./assets/columns.svg" alt="icon" />
+                </div>
+                <div>
+                    <p><strong>No Limits</strong></p>
+                    <p>
+                        There are absolutely no limits. We do not yhrottle. We
+                        do not cap.
+                    </p>
+                </div>
+            </aside>
+            <!-- </section>
+            <aside class="pseudo-cell">
+                <div>
+                    <img src="./assets/swim.svg" alt="icon" />
+                </div>
+                <div>
+                    <p><strong> An Acquired Taste</strong></p>
+                    <p>
+                        It may take a litlle while for you to warm up to us once
+                        you do you will never want to switch.
+                    </p>
+                </div>
+            </aside>
+            <aside class="pseudo-cell second">
+                <div>
+                    <img src="./assets/columns.svg" alt="icon" />
+                </div>
+                <div>
+                    <p><strong>No Limits</strong></p>
+                    <p>
+                        There are absolutely no limits. We do not yhrottle. We
+                        do not cap.
+                    </p>
+                </div>
+            </aside>
+        </section> -->
         </section>
         <footer>© 2016 Some Organization</footer>
     </body>
