completed spiced web site

--- a/exercises/htmlandcss/spiced web site/index.html
+++ b/exercises/htmlandcss/spiced web site/index.html
@@ -32,10 +32,10 @@
             <aside class="pseudo-cell" class="pseudo-cell">
                 <div>
                     <img src="./assets/cat.svg" alt="icon" />
-                </div>
-                <div>
-                    <p><strong> Best-in-class Features</strong></p>
+
                     <p>
+                        <strong> Best-in-class Features</strong><br />
+
                         Nobody does this stuff better than us. You can bet your
                         live on that.
                     </p>
@@ -44,50 +44,24 @@
             <aside class="pseudo-cell second">
                 <div>
                     <img src="./assets/world.svg" alt="icon" />
-                </div>
-                <div>
-                    <p><strong> Reliable Service</strong></p>
+
                     <p>
+                        <strong> Reliable Service</strong>
+
                         You can count on us to help you whenever you need it.
                         We're talking round the clock service.
                     </p>
                 </div>
             </aside>
-            <!-- </section>
-            <aside class="pseudo-cell">
-                <div>
-                    <img src="./assets/swim.svg" alt="icon" />
-                </div>
-                <div>
-                    <p><strong> An Acquired Taste</strong></p>
-                    <p>
-                        It may take a litlle while for you to warm up to us once
-                        you do you will never want to switch.
-                    </p>
-                </div>
-            </aside>
-            <aside class="pseudo-cell second">
-                <div>
-                    <img src="./assets/columns.svg" alt="icon" />
-                </div>
-                <div>
-                    <p><strong>No Limits</strong></p>
-                    <p>
-                        There are absolutely no limits. We do not yhrottle. We
-                        do not cap.
-                    </p>
-                </div>
-            </aside>
-        </section> -->
         </section>
         <section class="about">
             <aside class="pseudo-cell">
                 <div>
                     <img src="./assets/swim.svg" alt="icon" />
-                </div>
-                <div>
-                    <p><strong> An Acquired Taste</strong></p>
+
                     <p>
+                        <strong> An Acquired Taste</strong>
+
                         It may take a litlle while for you to warm up to us once
                         you do you will never want to switch.
                     </p>
@@ -96,10 +70,10 @@
             <aside class="pseudo-cell second">
                 <div>
                     <img src="./assets/columns.svg" alt="icon" />
-                </div>
-                <div>
-                    <p><strong>No Limits</strong></p>
+
                     <p>
+                        <strong>No Limits</strong>
+
                         There are absolutely no limits. We do not yhrottle. We
                         do not cap.
                     </p>
@@ -111,7 +85,7 @@
                     <img src="./assets/swim.svg" alt="icon" />
                 </div>
                 <div>
-                    <p><strong> An Acquired Taste</strong></p>
+                    <h4><strong> An Acquired Taste</strong></h4>
                     <p>
                         It may take a litlle while for you to warm up to us once
                         you do you will never want to switch.
@@ -123,7 +97,7 @@
                     <img src="./assets/columns.svg" alt="icon" />
                 </div>
                 <div>
-                    <p><strong>No Limits</strong></p>
+                    <h4><strong>No Limits</strong></h4>
                     <p>
                         There are absolutely no limits. We do not yhrottle. We
                         do not cap.
