DOM events exercises

--- a/week-2/aliester-encounter/dom-events-homework/exercise3.html
+++ b/week-2/aliester-encounter/dom-events-homework/exercise3.html
@@ -10,18 +10,7 @@
         <div
             id="square"
             style="height: 100px; width: 100px; border: 1px solid black"
-        >
-            <!-- <div
-                class="small"
-                style="
-                    height: 50px;
-                    width: 50px;
-                    background-color: blueviolet;
-                    position: absolute;
-                    border: 1px solid black;
-                "
-            ></div> -->
-        </div>
+        ></div>
         <script src="exercise3.js"></script>
     </body>
 </html>
