--- a/week-1/exercises/htmlandcss/spiced web site/index.html
+++ b/week-1/exercises/htmlandcss/spiced web site/index.html
@@ -79,33 +79,30 @@
                     </p>
                 </div>
             </aside>
-            <!-- </section>
-            <aside class="pseudo-cell">
-                <div>
-                    <img src="./assets/swim.svg" alt="icon" />
-                </div>
-                <div>
-                    <h4><strong> An Acquired Taste</strong></h4>
-                    <p>
-                        It may take a litlle while for you to warm up to us once
-                        you do you will never want to switch.
-                    </p>
-                </div>
-            </aside>
-            <aside class="pseudo-cell second">
-                <div>
-                    <img src="./assets/columns.svg" alt="icon" />
-                </div>
-                <div>
-                    <h4><strong>No Limits</strong></h4>
-                    <p>
-                        There are absolutely no limits. We do not yhrottle. We
-                        do not cap.
-                    </p>
-                </div>
-            </aside>
-        </section> -->
         </section>
         <footer>© 2016 Some Organization</footer>
+
+        <div id="overlay">
+            <div id="side-nav">
+                <div id="menu-x"><a href="javascript://">x</a></div>
+                <br />
+                <div>
+                    <a href="javascript://">Home</a>
+                </div>
+                <div>
+                    <a href="javascript://">Pricing</a>
+                </div>
+                <div>
+                    <a href="javascript://">Contact</a>
+                </div>
+                <div>
+                    <a href="javascript://">About us</a>
+                </div>
+                <div>
+                    <a href="javascript://">Log out</a>
+                </div>
+            </div>
+        </div>
+        <script src="script.js"></script>
     </body>
 </html>
