menu hamburguer transition

--- a/week-1/exercises/htmlandcss/spiced web site/index.html
+++ b/week-1/exercises/htmlandcss/spiced web site/index.html
@@ -82,9 +82,11 @@
         </section>
         <footer>© 2016 Some Organization</footer>
 
-        <div id="overlay">
-            <div id="side-nav">
-                <div id="menu-x"><a href="javascript://">x</a></div>
+        <div class="overlay">
+            <div class="side-nav">
+                <div id="menu-x" class="menu-x">
+                    <a href="javascript://">x</a>
+                </div>
                 <br />
                 <div>
                     <a href="javascript://">Home</a>
@@ -99,7 +101,7 @@
                     <a href="javascript://">About us</a>
                 </div>
                 <div>
-                    <a href="javascript://">Log out</a>
+                    <a href="javascript://" class="logout">Log out</a>
                 </div>
             </div>
         </div>
