--- a/week-2/andrea-encounters/homework/canvas/index.html
+++ b/week-2/andrea-encounters/homework/canvas/index.html
@@ -8,15 +8,9 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <canvas
-            id="big-canvas"
-            width="1000"
-            height="1000"
-            style="position: relative; z-index: 1"
-            ;
-        >
-            <canvas id="canvas" width="500" height="500"></canvas
-        ></canvas>
+        <canvas id="canvas" width="500" height="800"></canvas>
+        <canvas id="big-canvas" width="1000" height="800"></canvas>
+
         <script src="script.js"></script>
     </body>
 </html>
