--- a/week-2/david-encounters/kitty-carousel/index.html
+++ b/week-2/david-encounters/kitty-carousel/index.html
@@ -13,6 +13,12 @@
             <img class="onscreen" src="./assets/kit2.jpg" alt="cuteness" />
             <img class="onscreen" src="./assets/kit3.jpg" alt="cuteness" />
             <img class="onscreen" src="./assets/kit4.jpg" alt="cuteness" />
+            <div id="circles">
+                <div id="kit1" class="circle"></div>
+                <div id="kit2" class="circle"></div>
+                <div id="kit3" class="circle"></div>
+                <div id="kit4" class="circle"></div>
+            </div>
         </div>
 
         <!-- <header>
