removing onscreen from elements

--- a/week-2/david-encounters/kitty-carousel/index.html
+++ b/week-2/david-encounters/kitty-carousel/index.html
@@ -10,9 +10,9 @@
     <body>
         <div id="kitties">
             <img class="onscreen" src="./assets/kit1.jpg" alt="cuteness" />
-            <img class="onscreen" src="./assets/kit2.jpg" alt="cuteness" />
-            <img class="onscreen" src="./assets/kit3.jpg" alt="cuteness" />
-            <img class="onscreen" src="./assets/kit4.jpg" alt="cuteness" />
+            <img src="./assets/kit2.jpg" alt="cuteness" />
+            <img src="./assets/kit3.jpg" alt="cuteness" />
+            <img src="./assets/kit4.jpg" alt="cuteness" />
             <div id="circles">
                 <div id="kit1" class="circle"></div>
                 <div id="kit2" class="circle"></div>
