--- a/week-1/exercises/htmlandcss/spiced web site/index.html
+++ b/week-1/exercises/htmlandcss/spiced web site/index.html
@@ -22,6 +22,27 @@
                 />
             </div>
         </header>
+        <div id="pop-up-container">
+            <div id="pop-up">
+                <div id="close"><button class="close">X</button></div>
+                <div>
+                    <p>
+                        <strong> Welcome to our redesigned site! </strong>
+                    </p>
+                    <br /><br />
+                    <br /><br />
+                    <p>Would like to take a <a href=""javascript://"">tour</a> of our new features?</p>
+                    <br />
+                    <br />
+                    <br />
+                    <p>
+                        By the way, this site uses cookies to track every little
+                        thing you do and if you're here we are going to assume
+                        you are ok with that.
+                    </p>
+                </div>
+            </div>
+        </div>
         <!-- div.container>h3*4 shortcut-->
         <section class="container">
             <img id="spices" src="./assets/spices.jpg" alt="" srcset="" />
@@ -101,6 +122,7 @@
                     <a href="javascript://">About us</a>
                 </div>
                 <div>
+                    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
                     <a href="javascript://" class="logout">Log out</a>
                 </div>
             </div>
