no winner implementation

--- a/week-3/david-encounter/connect4/connect4.html
+++ b/week-3/david-encounter/connect4/connect4.html
@@ -12,6 +12,7 @@
             <div class="turn-container">
                 <div class="turn">
                 <h1>Turn</h1>
+                    
                     <img class="turn1" src="./connect4.png" srcset="">
                     <img class="turn2" src="./1200px-Ampelmann_Rot.svg.png" alt="current player" srcset="">
             </div>
@@ -161,8 +162,10 @@
             </div>
         </div>
         <div class="container">
-            <div class="play victory"></div>
-            <button id="play">Play again</button>
+            <div class="winner-p">Winner  🏆</div>
+            <div id="winner"></div>
+            <div class="no-winner"><p>GAME OVER👎</p></div>
+            <button id="play-button">Play again</button>
         </div>
         <!-- <div class="container">
             <button>Play again</button>
