remove winner sentence

--- a/week-3/david-encounter/connect4/connect4.html
+++ b/week-3/david-encounter/connect4/connect4.html
@@ -11,8 +11,7 @@
         <div>
             <div class="turn-container">
                 <div class="turn">
-                <h1>Turn</h1>
-                    
+                <h1>Player</h1>
                     <img class="turn1" src="./connect4.png" srcset="">
                     <img class="turn2" src="./1200px-Ampelmann_Rot.svg.png" alt="current player" srcset="">
             </div>
