--- a/week-4/spotfy-search/index.html
+++ b/week-4/spotfy-search/index.html
@@ -5,22 +5,30 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <title>Spotify</title>
+        <link rel="shortcut icon" href="./spotfy.png" type="image/x-icon" />
+        <title>Spotify Search</title>
     </head>
     <body>
-        <div class="search-fields">
-            <input type="text" />
-            <select>
-                <option value="artist">Artist</option>
-                <option value="album">Album</option>
-            </select>
-            <button class="submit-button">Submit</button>
+        <div>
+            <div class="div-spotify">
+                <img class="spotfy" src="./spotfy.png" alt="" />
+                <h1 class="spotfy-h1">Spotify</h1>
+            </div>
+            <div class="search-fields">
+                <input value="🔍" type="text" />
+                <select>
+                    <option value="artist">Artist</option>
+                    <option value="album">Album</option>
+                </select>
+                <button class="submit-button">Submit</button>
+            </div>
+
+            <div class="results-container"></div>
+
+            <button class="more-button">More</button>
+
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+            <script src="script.js"></script>
         </div>
-
-        <div class="results-container"></div>
-        <button class="more-button">More</button>
-
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="script.js"></script>
     </body>
 </html>
