--- a/week-4/spotfy-search/index.html
+++ b/week-4/spotfy-search/index.html
@@ -5,14 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <link rel="shortcut icon" href="./spotfy.png" type="image/x-icon" />
+        <link
+            rel="shortcut icon"
+            href="./Spotify-Logo.png"
+            type="image/x-icon"
+        />
         <title>Spotify Search</title>
     </head>
     <body>
         <div>
             <div class="div-spotify">
-                <img class="spotfy" src="./spotfy.png" alt="" />
-                <h1 class="spotfy-h1">Spotify</h1>
+                <div class="spotfy"><img src="./spotfy.png" alt="" /></div>
+                <!-- <h1 class="spotfy-h1">Spotify</h1> -->
             </div>
             <div class="search-fields">
                 <input value="🔍" type="text" />
@@ -25,7 +29,7 @@
 
             <div class="results-container"></div>
 
-            <button class="more-button">More</button>
+            <button class="more-button submit-button">More +</button>
 
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
             <script src="script.js"></script>
