refactore spotify code

--- a/week-4/handlebars/handle-exercise/index.html
+++ b/week-4/handlebars/handle-exercise/index.html
@@ -24,7 +24,7 @@
                         <li>{{this}}</li>
                     {{/selectedWritings}}
                     <h2>{{quote}}</h2>
-                    <img src="{{this.photo}}" />
+                    <img src="{{photo}}" />
                 </div>
             {{/authors}}
         </script>
