--- a/week-4/spotfy-search/index.html
+++ b/week-4/spotfy-search/index.html
@@ -19,20 +19,20 @@
                 <!-- <h1 class="spotfy-h1">Spotify</h1> -->
             </div>
             <div class="search-fields">
-                <input value="🔍" type="text" />
+                <input value="" type="text" />
                 <select>
                     <option value="artist">Artist</option>
                     <option value="album">Album</option>
                 </select>
-                <button class="submit-button">Submit</button>
+                <button id="submit-button">Submit</button>
             </div>
 
             <div class="results-container"></div>
 
-            <button class="more-button submit-button">More +</button>
+            <button id="more-button">More +</button>
 
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-            <script src="script.js"></script>
+            <script src="andreamodel.js"></script>
         </div>
     </body>
 </html>
