--- a/week-4/spotfy-search/index.html
+++ b/week-4/spotfy-search/index.html
@@ -32,7 +32,7 @@
             <button id="more-button">More +</button>
 
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-            <script src="andreamodel.js"></script>
+            <script src="script2.js"></script>
         </div>
     </body>
 </html>
